config/service/api-bridge.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: api-bridge
  name: api-bridge-service
spec:
  externalTrafficPolicy: Cluster
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8085
  selector:
    app: api-bridge
  sessionAffinity: None
  type: NodePort
