config/service/cassandra.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: cassandra-service
    service: cassandra-service
  name: cassandra-service
spec:
  ports:
  - name: tcp-7000
    port: 7000
    protocol: TCP
    targetPort: 7000
  - name: tcp-7001
    port: 7001
    protocol: TCP
    targetPort: 7001
  - name: tcp-7199
    port: 7199
    protocol: TCP
    targetPort: 7199
  - name: tcp-9042
    port: 9042
    protocol: TCP
    targetPort: 9042
  - name: tcp-9160
    port: 9160
    protocol: TCP
    targetPort: 9160
  selector:
    app: cassandra
  sessionAffinity: None
