config/service/client-bridge.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: client-bridge
  name: client-bridge-service
spec:
  externalTrafficPolicy: Cluster
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8081
  selector:
    app: client-bridge
  sessionAffinity: None
  type: NodePort
