config/service/grafana.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: grafana-service
    service: grafana-service
  name: grafana-service
spec:
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
    name: tcp-3000
  selector:
    app: grafana
  sessionAffinity: None
