config/service/hub-bridge.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hub-bridge
  name: hub-bridge-service
spec:
  externalTrafficPolicy: Cluster
  ports:
  - nodePort: 31804
    port: 8082
    protocol: TCP
    targetPort: 8082
  selector:
    app: hub-bridge
  sessionAffinity: None
  type: LoadBalancer
