config/service/ipcd-bridge.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ipcd-bridge
  name: ipcd-bridge-service
spec:
  externalTrafficPolicy: Cluster
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8084
  selector:
    app: ipcd-bridge
  sessionAffinity: None
  type: NodePort
