config/service/ivr-callback-server.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ivr-callback-server
  name: ivr-callback-server-service
spec:
  externalTrafficPolicy: Cluster
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8085
  selector:
    app: ivr-callback-server
  sessionAffinity: None
  type: NodePort
