config/service/kafka.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: kafka
    service: kafka
  name: kafka-service
spec:
  ports:
  - port: 9092
    protocol: TCP
    targetPort: 9092
  selector:
    app: kafka
  sessionAffinity: None
  type: ClusterIP
