config/service/kafka.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: kafka
  name: kafka-service
spec:
  externalTrafficPolicy: Cluster
  ports:
  - nodePort: 30997
    port: 9092
    protocol: TCP
    targetPort: 9092
  selector:
    app: kafka
  sessionAffinity: None
  type: NodePort
