config/service/kairosdb.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: kairosdb-service
    service: kairosdb-service
  name: kairosdb-service
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
    name: tcp-8080
  selector:
    app: kairosdb
  sessionAffinity: None
