config/service/prometheus.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: prometheus
  name: prometheus-service
spec:
  externalTrafficPolicy: Cluster
  ports:
  - port: 9080
    protocol: TCP
    targetPort: 9080
  selector:
    app: prometheus
  sessionAffinity: None
  type: NodePort
