config/service/zookeeper.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: zookeeper
    service: zookeeper
  name: zookeeper-service
spec:
  ports:
  - port: 2181
    protocol: TCP
    targetPort: 2181
    name: tcp-2181
  selector:
    app: zookeeper
  sessionAffinity: None
