config/service/ui-service-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ui-service-ingress
  annotations:
    kubernetes.io/tls-acme: "true"
    certmanager.k8s.io/cluster-issuer: "letsencrypt-staging"
spec:
  rules:
  - host: arcussmarthome.com
    http:
      paths:
      - path: /
        backend:
          serviceName: ui-server-service
          servicePort: 8096
  - host: client.arcussmarthome.com
    http:
      paths:
      - path: /
        backend:
          serviceName: client-bridge-service
          servicePort: 80
      - path: /ivr
        backend:
          serviceName: ivr-callback-server-service
          servicePort: 80
  tls:
  - secretName: nginx-staging-tls
    hosts:
    - arcussmarthome.com
    - client.arcussmarthome.com
    - hub.arcussmarthome.com
